--- a/src/index.css
+++ b/src/index.css
@@ -58,6 +58,7 @@ h1 {
   background: linear-gradient(#383624, #282617);
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
   position: relative;
+  width: 512px;
 }
 
 #players {
